# telegram-gigachat-agent

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: agents.py  main.py  models.py  tools.py
